# Betriebssysteme

./: .gitignore  CMakeLists.txt  qZahlenAlex.c  qzahlen.c  qzahlen_extended.c
A0/: antworten.txt  endlösung  notes.txt  qZahlenAlex.c  qZahlen_extendedAlex.c  qzahlen.c  qzahlen_extended.c
A1/: antworten.txt
A1/Alex/: 1a.c  1b.c  1c.c  1extended.c  Test.c
A1/Kevin/: 1a.c  1b.c  1c.c  1extended.c
A1/Weeb/: 1a.c  1b.c  1c.c  Weebantworten
A2/Alex/: antworten.txt  prime.c  primeOld.c
A2/Vorgabe/: prime.c
A3/Alex/: 3_c.c  3_extended.c  3_extendedFehler.c  antworten.txt
A3/vorgabe-A3/: 3_b.c  3_c.c  main.c  main.h
A4/Alex/: 4a.c  4b.c  4extended.c  Makefile  antworten.txt  firstfit.c  firstfit.h  test_4b.c  test_4extended.c
A4/vorgabe-A4/: 4a.c  4a.h  4b.c  4b.h  4extended.c  4extended.h  deps.mk  test_4a.c  test_4b.c
A5/Alex/: Antworten  Makefile  a5.c  a5.h  a5extended.c  main.c
A5/Test/: a
A5/Vorgabe/: a5.c
Temp/: StringGenerator.c
